--- a/HomeLedApp/UI/SharedStyles.xaml
+++ b/HomeLedApp/UI/SharedStyles.xaml
@@ -1,12 +1,12 @@
 ﻿<ResourceDictionary xmlns="http://xamarin.com/schemas/2014/forms"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:ui="clr-namespace:HomeLedApp.UI"
                     x:Class="HomeLedApp.SharedStyles">
     <OnPlatform x:Key="FontAwesomeSolid" x:TypeArguments="x:String">
         <On Platform="UWP, WinRT, WinPhone" Value="/Assets/Fonts/iconize-fontawesome-solid.ttf#Font Awesome 5 Free Solid"/>
         <On Platform="Android" Value="Fonts/iconize-fontawesome-solid.ttf#Font Awesome 5 Free Solid"/>
         <On Platform="iOS" Value="Font Awesome 5 Free"/>
     </OnPlatform>
-    <!-- <resources:IO_NuYen x:Key="IO_NuYen"/> -->
+    <ui:IO_ModesToString x:Key="IO_ModesToString"/>
 
     <Style x:Key="SliderStyle" TargetType="Slider">
         <Setter Property="MinimumTrackColor" Value="Accent"/>
@@ -22,7 +22,6 @@
     <Style x:Key="HeadLineText" TargetType="Label" BasedOn="{StaticResource STDText}">
         <Setter Property="LineBreakMode" Value="TailTruncation"/>
         <Setter Property="MaxLines" Value="1"/>
-        <!--<Setter Property="FontSize" Value="Medium"/>-->
         <Setter Property="FontAttributes" Value="Bold"/>
     </Style>
     <Style x:Key="SubTitle" TargetType="Label" BasedOn="{StaticResource STDText}">
@@ -31,7 +30,6 @@
 
     <Style x:Key="IconLabel" TargetType="Label" BasedOn="{StaticResource STDText}">
         <Setter Property="FontFamily" Value="{StaticResource FontAwesomeSolid}"/>
-        <Setter Property="VerticalOptions" Value="Center"/>
         <Setter Property="HorizontalOptions" Value="Center"/>
     </Style>
     <Style x:Key="HelpLabel" TargetType="Label" BasedOn="{StaticResource IconLabel}">
@@ -42,7 +40,7 @@
         <Setter Property="CornerRadius" Value="3"/>
         <Setter Property="TextColor" Value="FloralWhite"/>
         <Setter Property="VerticalOptions" Value="Center"/>
-        <Setter Property="HorizontalOptions" Value="Center"/>
+        <Setter Property="HorizontalOptions" Value="Fill"/>
     </Style>
     <Style x:Key="IconButton" TargetType="Button" BasedOn="{StaticResource STDButton}">
         <Setter Property="FontFamily" Value="{StaticResource FontAwesomeSolid}"/>
