--- a/HomeLedApp/UI/DetailsPopUp.xaml
+++ b/HomeLedApp/UI/DetailsPopUp.xaml
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<pages:PopupPage xmlns="http://xamarin.com/schemas/2014/forms" 
+<pages:PopupPage xmlns="http://xamarin.com/schemas/2014/forms"
                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                 xmlns:pages="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup"
+                xmlns:resx="clr-namespace:HomeLedApp.Strings"
                 xmlns:animations="clr-namespace:Rg.Plugins.Popup.Animations;assembly=Rg.Plugins.Popup"
                 x:Class="HomeLedApp.UI.DetailsPopUp">
     <pages:PopupPage.Animation>
-        <animations:ScaleAnimation 
+        <animations:ScaleAnimation
                     PositionIn="Center"
                     PositionOut="Center"
                     ScaleIn="1.2"
@@ -25,7 +26,7 @@
                 <Button CornerRadius="5" Text="Debug" Clicked="AddDebug"/>
                 <Button CornerRadius="5" Text="Scale" Clicked="AddScale"/>
             </StackLayout>
-            <Button CornerRadius="5" Text="Send and Close" HorizontalOptions="Center" Clicked="OK"/>
+            <Button CornerRadius="5" Text="{resx:AppResources SendAndClose}" HorizontalOptions="Center" Clicked="OK"/>
         </StackLayout>
     </Frame>
 </pages:PopupPage>
