--- a/HomeLedApp/UI/MainPage.xaml
+++ b/HomeLedApp/UI/MainPage.xaml
@@ -100,26 +100,16 @@
                             </Label.GestureRecognizers>
                         </Label>
                     </StackLayout>
-                    <Frame Grid.Row="1" CornerRadius="10" Margin="0" Padding="0" HeightRequest="30">
+                    <Frame Grid.Row="1" CornerRadius="10" Margin="0" Padding="0" HeightRequest="30" x:Name="HueFrame">
                         <Image x:Name="ColorSpectrum" Aspect="Fill"/>
                     </Frame>
                     <ui:SliderElement Grid.Row="1" TitleResource="Hue" Property="Model.Hue" x:Name="HueSlider"/>
-                    <ui:SliderElement Grid.Row="3" TitleResource="Saturation" Property="Model.Saturation"/>
-                    <ui:SliderElement Grid.Row="4" TitleResource="Luminosity" Property="Model.Luminosity"/>
-                    <ui:SliderElement Grid.Row="5" TitleResource="Brigthnes" Property="Model.Brigthnes"/>
+                    <ui:SliderElement Grid.Row="2" TitleResource="Saturation" Property="Model.Saturation" x:Name="SatSlider"/>
+                    <ui:SliderElement Grid.Row="3" TitleResource="Luminosity" Property="Model.Luminosity" x:Name="LumSlider"/>
+                    <ui:SliderElement Grid.Row="4" TitleResource="Brigthnes" Property="Model.Brigthnes" x:Name="BriSlider"/>
+                    <ui:SliderElement Grid.Row="5" TitleResource="Speed" Property="Model.Speed" x:Name="SpeedSlider"/>
                     <ui:SliderElement Grid.Row="6" TitleResource="NumberOfLeds" Property="Model.NumberOfLeds"/>
                 </Grid>
-                <StackLayout x:Name="Panel_ModeParameter" Spacing="0">
-                    <StackLayout Orientation="Horizontal">
-                        <Label Text="{resx:AppResources ModeParameter_Headline}" Style="{StaticResource HeadLineText}"/>
-                        <Label Style="{StaticResource HelpLabel}">
-                            <Label.GestureRecognizers>
-                                <TapGestureRecognizer Tapped="Info_Tapped" CommandParameter="{resx:AppResources ModeParameter_Info}"/>
-                            </Label.GestureRecognizers>
-                        </Label>
-                    </StackLayout>
-                    <ui:SliderElement TitleResource="Speed" Property="Model.Speed"/>
-                </StackLayout>
                 <Grid x:Name="Panel_SinParameter" IsVisible="False">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
