--- a/HomeLedApp/UI/MainPage.xaml
+++ b/HomeLedApp/UI/MainPage.xaml
@@ -110,7 +110,8 @@
                 <ui:SliderElement Grid.Row="4" TitleResource="Brigthnes" Property="Model.Brigthnes" x:Name="BriSlider"/>
                 <ui:SliderElement Grid.Row="5" TitleResource="Speed" Property="Model.Speed" x:Name="SpeedSlider"/>
                 <ui:SliderElement Grid.Row="6" TitleResource="NumberOfLeds" Property="Model.NumberOfLeds"/>
-                <ui:SliderElement Grid.Row="1" TitleResource="Width" Property="Model.Width" x:Name="WidthSlider"/>
+                <ui:SliderElement TitleResource="Width" Property="Model.Width" x:Name="WidthSlider"/>
+                <ui:SliderElement TitleResource="Fringe" Property="Model.Fringe" x:Name="FringeSlider"/>
                 <Grid x:Name="Panel_SinParameter" IsVisible="False">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
